# gaokao-query

./: .gitignore  Cargo.toml  ocr_helper.py  ocr_server.py
src/: app.rs  browser.rs  config.rs  data.rs  job.rs  lib.rs  main.rs  matcher.rs  ocr.rs  parser.rs  prediction.rs
