[package]
name = "gaokao"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
calamine = "0.26"
rust_xlsxwriter = "0.82"
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rfd = "0.15"
futures-util = "0.3"
chrono = "0.4"
base64 = "0.22"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
